<resources>
    <string name="app_name">AMS Tuck Shop</string>
    <string name="ams_tuck_shop">AMS Tuck Shop</string>
    <string name="shop">Shop</string>
    <string name="ams_tuck">AMS Tuck</string>
    <string name="sign_in">Sign in</string>
    <string name="school_email">School email</string>
    <string name="password">Password</string>
    <string name="sign_in_button">"Sign In "</string>
</resources>