<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    app:context=".RegisterActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        android:background="#6fff">
        <TextView
            android:layout_width="133dp"
            android:layout_height="120dp"
            android:width="10dp"
            android:height="10dp"
            android:background="@drawable/logo"
            android:gravity="center"
            android:textColor="#000" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/ams_tuck_shop"
            android:textColor="#000"
            android:textSize="35sp" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:fontFamily="sans-serif-thin"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/register_btn"
            android:hint="@string/school_email"
            android:textColorHint="#8fff"
            android:autofillHints="@string/school_email"
            android:inputType="text"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/register_btn"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:textColorHint="#9fff"
            android:inputType="text"
            android:autofillHints="@string/password"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/sign_in_button"
            android:layout_marginTop="13dp"
            android:background="@drawable/btn_colour"
            android:textColor="#000"/>

    </LinearLayout>
</LinearLayout>
